--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -1,3 +1,213 @@
 {
-    "one": "one"
+    "upgdesc1": "Increase production of Workers per producer bought.",
+    "upgdesc2": "Increase production of Investments per producer bought.",
+    "upgdesc3": "Increase production of Printers per producer bought.",
+    "upgdesc4": "Increase production of Mints per producer bought.",
+    "upgdesc5": "Increase production of Alchemies per producer bought.",
+    "upgdesc6": "Increase all production by 25% per producer bought.",
+    "upgdesc7": "Gain free multipliers based on your purchased Alchemies.",
+    "upgdesc8": "Gain 1 free Accelerator per 7 purchased Multipliers.",
+    "upgdesc9": "Gain 1 free Multiplier per 10 purchased Accelerators.",
+    "upgdesc10": "Improve Workers based on the first 750 purchased Investments.",
+    "upgdesc11": "Accelerators improve generation production by 2% each.",
+    "upgdesc12": "Each prestige multiplies production by 1.01, multiplicatively (Max: 1e4x).",
+    "upgdesc13": "Augments buff the production of Investments.",
+    "upgdesc14": "Free Accelerators buff generation of Printers.",
+    "upgdesc15": "Free Accelerators buff generation of Mints.",
+    "upgdesc16": "Acceleration Multiplier buffs Diamond gain.",
+    "upgdesc17": "Multiply Mint production by 1e+100.",
+    "upgdesc18": "Multiply Printer production based on Mythos Shards.",
+    "upgdesc19": "Multiply Investment production based on Mythos.",
+    "upgdesc20": "Coin upgrade 1 is raised to the eleventh power.",
+    "upgdesc21": "Gain 1 Multiplier and 5 Accelerators plus 1% more free Multipliers/Accelerators.",
+    "upgdesc22": "Gain 1 Multiplier and 4 Accelerators plus 1% more free Multipliers/Accelerators.",
+    "upgdesc23": "Gain 1 Multiplier and 3 Accelerators plus 1% more free Multipliers/Accelerators.",
+    "upgdesc24": "Gain 1 Multiplier and 2 Accelerators plus 1% more free Multipliers/Accelerators.",
+    "upgdesc25": "Gain 1 Multiplier and 1 Accelerators plus 1% more free Multipliers/Accelerators.",
+    "upgdesc26": "Gain a free Accelerator Boost.",
+    "upgdesc27": "Gain free Accelerators based on unspent Coins.",
+    "upgdesc28": "Gain a free Multiplier per 160 Coin producers bought.",
+    "upgdesc29": "Gain a free Accelerator per 80 Coin producers bought.",
+    "upgdesc30": "Gain free Multipliers based on unspent Coins.",
+    "upgdesc31": "Gain 1 free Accelerator Boost per 2,000 Coin producers bought.",
+    "upgdesc32": "Gain free Accelerators based on Unspent Diamonds.",
+    "upgdesc33": "Gain 1 free Multiplier for each Accelerator Boost owned.",
+    "upgdesc34": "Gain 3% more free Multipliers.",
+    "upgdesc35": "Gain 2% more free Multipliers.",
+    "upgdesc36": "Multiply crystal production by Diamonds, maximum 1e5000x.",
+    "upgdesc37": "Multiply mythos shard production by the squared logarithm of Diamonds.",
+    "upgdesc38": "Multiply Printer production by 1e+4000.",
+    "upgdesc39": "Multiply Investment production by 1e+7000.",
+    "upgdesc40": "Multiply Worker production by 1e+10000.",
+    "upgdesc41": "Multiply production based on unspent Mythos.",
+    "upgdesc42": "Multiply Mythos Shard production based on unspent Diamonds.",
+    "upgdesc43": "Multiply coin production by 1.01 per transcension (Max: 1e30x).",
+    "upgdesc44": "Multiply Mythos gain on Transcend by 1.01 per transcension (Max: 1e6x).",
+    "upgdesc45": "Gain free Accelerators based on Mythos Shards.",
+    "upgdesc46": "Accelerator Boosts are 5% stronger and do not reset prestige features.",
+    "upgdesc47": "Multiply Mythos Shard production based on your AP.",
+    "upgdesc48": "Multiply production based on owned Accelerators and Multipliers.",
+    "upgdesc49": "Gain free Multipliers based on unspent Mythos.",
+    "upgdesc50": "Gain +25% free Accelerators and Multipliers, but ONLY while doing challenges.",
+    "upgdesc51": "Increase production of all Mythos buildings based on owned Accelerator Boosts.",
+    "upgdesc52": "Mythos building exponent +0.025.",
+    "upgdesc53": "Augments produce more Shards based on Acceleration Multiplier.",
+    "upgdesc54": "Wizards produce more Enchantments based on Multiplier.",
+    "upgdesc55": "Grandmasters produce more Oracles based on Building power.",
+    "upgdesc56": "Worker production is multiplied by 1e+5000.",
+    "upgdesc57": "Investment production is multiplied by 1e+7500.",
+    "upgdesc58": "Printer production is multiplied by 1e+15000.",
+    "upgdesc59": "Coin Mint production is multiplied by 1e+25000.",
+    "upgdesc60": "Alchemies production is multiplied by 1e+35000.",
+    "upgdesc61": "Welcome to reincarnation! +5% Offering Recycle, +5 EXP/Offering!",
+    "upgdesc62": "Completing challenges, automatically or manually, increase offerings gained in Reincarnation. Bonus subject to time multiplier!",
+    "upgdesc63": "Crystal Production is multiplied based on Particles to the sixth power [Caps at 1e6000x].",
+    "upgdesc64": "Mythos Shard Production is multiplied by your Particles to the second power [Caps at 1e2000x].",
+    "upgdesc65": "Multiply the gain of Particles from Reincarnation by 5x!",
+    "upgdesc66": "When you use an Offering, every unlocked rune will get 3 free experience.",
+    "upgdesc67": "Atom gain is increased by 3% per Particle producer purchased!",
+    "upgdesc68": "Gain a free multiplier for every 1e1000x increase in tax.",
+    "upgdesc69": "Gain more Obtainium based on your particle gain. [Works with automation at a reduced rate!]",
+    "upgdesc70": "Gain more Obtainium from Reincarnations based on how long your current reincarnation is.",
+    "upgdesc71": "Runes will gain (Rune Level) additional EXP per offering used.",
+    "upgdesc72": "Obtainium gain from Reincarnations is multiplied (1 + 2C) where C is #Reincarnation Challenges completed, up to 50x!",
+    "upgdesc73": "Gain +100% free accelerator boosts and +10 free Crystal Upgrade levels, but only in Reincarnation Challenges.",
+    "upgdesc74": "Obtainium gain is increased based on highest ever unspent offerings. [Max: 100,000 unspent]",
+    "upgdesc75": "Offering gain is increased based on highest ever unspent obtainium [Max: 30,000,000 obtainium]",
+    "upgdesc76": "This upgrade added in an update near you!",
+    "upgdesc77": "This upgrade added in an update near you!",
+    "upgdesc78": "This upgrade added in an update near you!",
+    "upgdesc79": "This upgrade added in an update near you!",
+    "upgdesc80": "This upgrade added in an update near you!",
+    "upgdesc81": "Automatically buy Workers if affordable.",
+    "upgdesc82": "Automatically buy Investments if affordable.",
+    "upgdesc83": "Automatically buy Printers if affordable.",
+    "upgdesc84": "Automatically buy Coin Mints if affordable.",
+    "upgdesc85": "Automatically buy Alchemies if affordable.",
+    "upgdesc86": "Automatically buy Accelerators if affordable.",
+    "upgdesc87": "Automatically buy Multipliers if affordable.",
+    "upgdesc88": "Automatically buy Accelerator Boosts if affordable.",
+    "upgdesc89": "Unlock Automatic Transcensions.",
+    "upgdesc90": "Automatically buy from the Generator Shop.",
+    "upgdesc91": "Automatically buy Coin Upgrades.",
+    "upgdesc92": "Automatically buy Diamond Upgrades.",
+    "upgdesc93": "Generate 1% of Diamond Gain from prestiging per second.",
+    "upgdesc94": "Automatically buy Augments if affordable.",
+    "upgdesc95": "Automatically buy Enchantments if affordable.",
+    "upgdesc96": "Automatically buy Wizards if affordable.",
+    "upgdesc97": "Automatically buy Oracles if affordable.",
+    "upgdesc98": "Automatically buy Grandmasters if affordable.",
+    "upgdesc99": "Automatically buy Mythos Upgrades if affordable.",
+    "upgdesc100": "Generate 1% of Mythos Gain from transcending per second.",
+    "upgdesc101": "Alchemies will produce Coin Mints.",
+    "upgdesc102": "Coin Mints will produce Printers.",
+    "upgdesc103": "Printers will produce Investments.",
+    "upgdesc104": "Investments will produce Workers.",
+    "upgdesc105": "Purchased Workers will produce Alchemies.",
+    "upgdesc106": "Refineries can produce Alchemies equal to Refineries owned raised to 0.10",
+    "upgdesc107": "Refinery -> Alchemy exponent increased from 0.10 to 0.25.",
+    "upgdesc108": "Refinery -> Alchemy exponent increased from 0.25 to 0.50",
+    "upgdesc109": "Refinery -> Alchemy exponent increased from 0.50 to 0.75",
+    "upgdesc110": "Refinery -> Alchemy exponent increased from 0.75 to 1",
+    "upgdesc111": "Augments can produce Pandora Boxes equal to Augments owned raised to 0.08",
+    "upgdesc112": "Augment -> Box exponent increased from 0.08 to 0.16",
+    "upgdesc113": "Augment -> Box exponent increased from 0.16 to 0.24",
+    "upgdesc114": "Augment -> Box exponent increased from 0.24 to 0.32",
+    "upgdesc115": "Augment -> Box exponent increased from 0.32 to 0.40",
+    "upgdesc116": "Protons can produce Grandmasters equal to Protons owned raised to 0.05",
+    "upgdesc117": "Protons -> Grandmaster exponent increased from 0.05 to 0.10",
+    "upgdesc118": "Protons -> Grandmaster exponent increased from 0.10 to 0.15",
+    "upgdesc119": "Protons -> Grandmaster exponent increased from 0.15 to 0.20",
+    "upgdesc120": "Protons -> Grandmaster exponent increased from 0.20 to 0.25",
+
+    "crystalupgdesc1": "Gain a 5% multiplicative boost to crystals per AP per level.",
+    "crystalupgdesc2": "Gain a boost to crystals based on held coins per level.",
+    "crystalupgdesc3": "Each purchased Crystal producer increases generation of Crystal producers by .1% per level. [MAX: 12%]",
+    "crystalupgdesc4": "Improve the multiplier to coin production by .05 exponent per level. [MAX: +10.00]",
+    "crystalupgdesc5": "Every challenge completion increases crystal gain by 1% per level.",
+    "crystalupgdesc6": "Coming SOON!",
+    "crystalupgdesc7": "Coming SOON!",
+    "crystalupgdesc8": "Coming SOON!",
+
+    "resdesc1": "Increase the number of free Accelerators gained by 20% from all sources.",
+    "resdesc2": "Increase the number of free Multipliers gained by 20% from all sources.",
+    "resdesc3": "Increase the number of free Accelerator Boosts gained by 20% from all sources.",
+    "resdesc4": "Increase most rune effects by 10%. (Excludes any recycle chance bonus)",
+    "resdesc5": "Multiply the production of all crystal producers by 1e4.",
+    "resdesc6": "Gain +5% free accelerators per level.",
+    "resdesc7": "Gain +1.25% free accelerators per level.",
+    "resdesc8": "Gain +0.66% free accelerators per level.",
+    "resdesc9": "Gain +0.375% free accelerators per level.",
+    "resdesc10": "Gain +0.2% free accelerators per level.",
+    "resdesc11": "Gain +5% free multipliers per level.",
+    "resdesc12": "Gain +2.5% free multipliers per level.",
+    "resdesc13": "Gain +0.5% free multipliers per level.",
+    "resdesc14": "Gain +0.25% free multipliers per level.",
+    "resdesc15": "Gain +0.2% free multipliers per level.",
+    "resdesc16": "Gain +1% free accelerator boosts per level.",
+    "resdesc17": "Gain +1% free accelerator boosts per level.",
+    "resdesc18": "Gain +2 free accelerator per accelerator boost.",
+    "resdesc19": "Gain +2 free accelerator per accelerator boost.",
+    "resdesc20": "Gain +3 free accelerator per accelerator boost!",
+    "resdesc21": "Most rune effects are increased by 0.125% per level. (Excludes any recycle chance bonus)",
+    "resdesc22": "Each Offering used increases Rune EXP by 3 per level.",
+    "resdesc23": "Each Offering used increases Rune EXP by another 2 per level!",
+    "resdesc24": "Prestige and Transcensions base Offering is increased by 1 per level. (Affected by time factor!)",
+    "resdesc25": "Reincarnation and [???] base Offering is increased by 3 per level. (Affected by time factor!)",
+    "resdesc26": "Multiply all crystal producer production by 10% per level.",
+    "resdesc27": "Multiply all crystal producer production by 5% per level.",
+    "resdesc28": "Coin Exponent is increased by 0.02 per level.",
+    "resdesc29": "Coin Exponent is increased by another 0.02 per level.",
+    "resdesc30": "Coin Exponent is increased by ANOTHER 0.01 per level.",
+    "resdesc31": "Reduce threshold for multiplier boosts by 0.0125 per level.",
+    "resdesc32": "Reduce threshold for multiplier boosts by 0.01 per level.",
+    "resdesc33": "Reduce threshold for multiplier boosts by 0.0075 per level.",
+    "resdesc34": "Reduce threshold for multiplier boosts by 0.005 per level.",
+    "resdesc35": "Reduce threshold for multiplier boosts by 0.0025 per level.",
+    "resdesc36": "Building power scales 1% faster per level.",
+    "resdesc37": "Building power scales .5% faster per level.",
+    "resdesc38": "Building power scales .5% faster per level.",
+    "resdesc39": "Building power affects crystal production at a reduced rate.",
+    "resdesc40": "Building power affects mythos shard production at a reduced rate.",
+    "resdesc41": "Start Reincarnations with automatic A.Boosts unlocked. Note: this research doesn't affect earning achievements.",
+    "resdesc42": "Start Reincarnations with automatic Generators unlocked.",
+    "resdesc43": "Start Reincarnations with automatic C.Upgrades unlocked.",
+    "resdesc44": "Start Reincarnations with automatic D.Upgrades unlocked.",
+    "resdesc45": "Start Reincarnations with automatic Diamond production unlocked.",
+    "resdesc46": "Unlock the ability to automatically Reincarnate!",
+    "resdesc47": "Unlock Reincarnation upgrades 1-5. [Upgrades cost between 1 and 1,000 Particles]",
+    "resdesc48": "Unlock Reincarnation upgrades 6-10. [Upgrades cost between 100,000 and 1e22 Particles]",
+    "resdesc49": "Unlock Reincarnation upgrades 11-15. [Upgrades cost between 1e30 and 1e60 Particles]",
+    "resdesc50": "Unlock Reincarnation upgrades 16-20. (NOT ADDED IN GAME YET, upgrades do not do anything!)",
+    "resdesc51": "Taxation scales 5.0% slower per level. [Up to -50%]",
+    "resdesc52": "Taxation scales 2.5% slower per level. [Up to -75%]",
+    "resdesc53": "Taxation scales 1.25% slower per level. [Up to -87.5%]",
+    "resdesc54": "Taxation scales 0.625% slower per level. [Up to -93.75%]",
+    "resdesc55": "Taxation scales 0.3125% slower per level. [Up to -96.875%]",
+    "resdesc56": "Building Cost Scale is delayed by 0.5% per level.",
+    "resdesc57": "Building Cost Scale is delayed by 0.5% per level.",
+    "resdesc58": "Building Cost Scale is delayed by 0.5% per level.",
+    "resdesc59": "Building Cost Scale is delayed by 0.5% per level.",
+    "resdesc60": "Building Cost Scale is delayed by 0.5% per level.",
+    "resdesc61": "Unlock the ability to automatically gain Obtainium! The base rate is 1 per 60 seconds.",
+    "resdesc62": "Lower the required amount of time to automatically gain obtainium by 1 second per level.",
+    "resdesc63": "Lower the required amount of time to automatically gain obtainium again, by 1 second per level.",
+    "resdesc64": "Gain +1 obtainium per level when you automatically gain them.",
+    "resdesc65": "Increase the rate of gaining obtainium through reincarnations by 2% per level.",
+    "resdesc66": "Increase the maximum number of [No Multipliers] completions by 1 per level.",
+    "resdesc67": "Increase the maximum number of [No Accelerators] completions by 1 per level.",
+    "resdesc68": "Increase the maximum number of [No Shards] completions by 1 per level.",
+    "resdesc69": "Increase the maximum number of [Cost+] completions by 1 per level.",
+    "resdesc70": "Increase the maximum number of [Diamond-] completions by 1 per level.",
+    "resdesc71": "Automatically gain completions for Challenge 1, even without running it!",
+    "resdesc72": "Automatically gain completions for Challenge 2, even without running it!",
+    "resdesc73": "Automatically gain completions for Challenge 3, even without running it!",
+    "resdesc74": "Automatically gain completions for Challenge 4, even without running it!",
+    "resdesc75": "Automatically gain completions for Challenge 5, even without running it!",
+    "resdesc76": "Got a lot of Obtainium saved? I hope you do! This research here will give you +1 Quarks per hour in your current reincarnation.",
+    "resdesc77": "Each level increases the cap on Speed rune by 1 per level. It also increases EXP on use by 1% per level if you're into that.",
+    "resdesc78": "Each level increases the cap on Duplication rune by 1 per level. It also increases EXP on use by 1% per level if you're into that.",
+    "resdesc79": "Each level increases the cap on Prism rune by 1 per level. It also increases EXP on use by 1% per level if you're into that.",
+    "resdesc80": "Each level increases the cap on Thrift rune by 1 per level. It also increases EXP on use by 1% per level if you're into that.",
+    "resdesc86": "Automated Obtainium feeling lacking? Well, what if I scaled it to be up to 10x more productive for longer runs?"
 }
