--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -209,5 +209,258 @@
     "resdesc78": "Each level increases the cap on Duplication rune by 1 per level. It also increases EXP on use by 1% per level if you're into that.",
     "resdesc79": "Each level increases the cap on Prism rune by 1 per level. It also increases EXP on use by 1% per level if you're into that.",
     "resdesc80": "Each level increases the cap on Thrift rune by 1 per level. It also increases EXP on use by 1% per level if you're into that.",
-    "resdesc86": "Automated Obtainium feeling lacking? Well, what if I scaled it to be up to 10x more productive for longer runs?"
+    "resdesc86": "Automated Obtainium feeling lacking? Well, what if I scaled it to be up to 10x more productive for longer runs?",
+
+    "adesc1": "A Loyal Employee: Hire your first worker.",
+    "adesc2": "Small Business: Hire 10 workers.",
+    "adesc3": "Now we're synergizing!: Hire 100 workers.",
+    "adesc4": "Gaining Redundancies: Hire 1,000 workers.",
+    "adesc5": "A cog in the machine: Hire 5,000 workers.",
+    "adesc6": "A nail in the machine: Hire 10,000 workers.",
+    "adesc7": "Are we even in the machine anymore?: Hire 20,000 workers.",
+    "adesc8": "STONKS!!!: Purchase 1 Investment.",
+    "adesc9": "Planning ahead: Purchase 10 Investments.",
+    "adesc10": "Inside Trading: Purchase 100 Investments.",
+    "adesc11": "Outside Trading?: Purchase 1,000 Investments.",
+    "adesc12": "Market Takeover: Purchase 5,000 Investments.",
+    "adesc13": "Trickle-Down Economics: Purchase 10,000 Investments.",
+    "adesc14": "Eliminated Regulation: Purchase 20,000 Investments.",
+    "adesc15": "Stationery!: Build 1 Printer.",
+    "adesc16": "Printing Press: Build 10 Printers.",
+    "adesc17": "It prints free money!: Build 100 Printers.",
+    "adesc18": "Solving Our Debts: Build 1,000 Printers.",
+    "adesc19": "Monopolizing the market: Build 5,000 Printers.",
+    "adesc20": "We're running out of Ink!: Build 10,000 Printers.",
+    "adesc21": "3D-printing the universe: Build 20,000 Printers.",
+    "adesc22": "A national treasure: Establish 1 Coin Mint.",
+    "adesc23": "Now with competition!: Establish 10 Coin Mints.",
+    "adesc24": "Counterfeiting with Style!: Establish 100 Coin Mints.",
+    "adesc25": "Why do we need all these?: Establish 1000 Coin Mints.",
+    "adesc26": "No really, why??: Establish 5,000 Coin Mints.",
+    "adesc27": "Is no one to stop us???: Establish 10,000 Coin Mints.",
+    "adesc28": "Oh well, time to mint: Establish 20,000 Coin Mints.",
+    "adesc29": "Newton's Apprentice: Create 1 Alchemy.",
+    "adesc30": "Lab Work: Create 10 Alchemies.",
+    "adesc31": "Satanic Becomings: Create 66 Alchemies.",
+    "adesc32": "Satan Incarnate: Create 666 Alchemies.",
+    "adesc33": "Is this more demonic?: Create 6,666 Alchemies.",
+    "adesc34": "Golden Paradise: Create 17,777 Alchemies.",
+    "adesc35": "Unlocking secrets to the world: Create 42,777 Alchemies.",
+    "adesc36": "Leveling up: Prestige for at least 1 Diamond.",
+    "adesc37": "High-Tiered: Prestige for at least 1e+6 Diamonds.",
+    "adesc38": "Highly Regarded: Prestige for at least 1e+100 Diamonds.",
+    "adesc39": "Prestigious: Prestige for at least 1e+1000 Diamonds.",
+    "adesc40": "Legendary: Prestige for at least 1e+10000 Diamonds.",
+    "adesc41": "Divine: Prestige for at least 1e+77777 Diamonds.",
+    "adesc42": "Perfectly Respected: Prestige for at least 1e+250000 Diamonds.",
+    "adesc43": "A Simple Detour: Transcend for at least 1 Mythos.",
+    "adesc44": "Tunnel Vision: Transcend for at least 1e+6 Mythos.",
+    "adesc45": "Risen from the Ashes: Transcend for at least 1e+50 Mythos.",
+    "adesc46": "Paradigm Shift: Transcend for at least 1e+308 Mythos.",
+    "adesc47": "Preparation: Transcend for at least 1e+2000 Mythos.",
+    "adesc48": "Revising the Plan: Transcend for at least 1e+25000 Mythos.",
+    "adesc49": "Leaving the Universe: Transcend for at least 1e+100000 Mythos.",
+    "adesc50": "Going Quantum: Reincarnate for at least 1 Particle.",
+    "adesc51": "Tunneling Vision: Reincarnate for at least 100,000 Particles.",
+    "adesc52": "Simulating the World: Reincarnate for at least 1e+30 Particles.",
+    "adesc53": "Multidimensional Creation: Reincarnate for at least 1e+200 Particles.",
+    "adesc54": "Lepton Dance: Reincarnate for at least 1e+1500 Particles.",
+    "adesc55": "Do we have enough yet?: Reincarnate for at least 1e+5000 Particles.",
+    "adesc56": "I Feel Luck in My Cells: Reincarnate for at least 1e+7777 Particles.",
+    "adesc57": "One Way Only: Prestige without buying multipliers.",
+    "adesc58": "Authentic Shifting: Transcend without having bought a multiplier.",
+    "adesc59": "The Singularity: Reincarnate without having bought a multiplier.",
+    "adesc60": "Gotta go SLOW!: Prestige without buying Accelerators or Accelerator Boosts.",
+    "adesc61": "I'm really going slow: Transcend without having bought Accelerators or Boosts.",
+    "adesc62": "Are we there yet?: Reincarnate without having bought Accelerators or Boosts.",
+    "adesc63": "A careful search for Diamonds: Get 1e120,000 Coins in [Diamond-] without buying Accelerators or Boosts.",
+    "adesc64": "Very Based: Prestige without purchasing Coin Upgrades.",
+    "adesc65": "Miser: Transcend without purchasing Coin Upgrades.",
+    "adesc66": "True Miser: Transcend without purchasing Coin or Diamond Upgrades.",
+    "adesc67": "Coinless Pursuit: Reincarnate without purchasing Coin Upgrades.",
+    "adesc68": "Diamonds don't matter to me!: Reincarnate without purchasing Coin or Diamond Upgrades.",
+    "adesc69": "Leave NOTHING behind: Reincarnate without purchasing Coin, Diamond or Mythos Upgrades.",
+    "adesc70": "Leave NOTHING behind: Reincarnate without purchasing Coin, Diamond, Mythos, or Generator Upgrades.",
+    "adesc71": "Out of Order: Buy Generator Upgrade Row 1, #2 first in a transcension (IV -> III)",
+    "adesc72": "More Out of Order: Buy Generator Upgrade Row 1, #3 first in a transcension (III -> II)",
+    "adesc73": "Four's a Company: Buy Generator Upgrade Row 1, #4 first in a transcension (II -> I)",
+    "adesc74": "Five's a Croud: Buy Generator Upgrade Row 1, #5 first in a transcension (I -> V)",
+    "adesc75": "Vaseline without the Machine: Exit [No Multiplier] with at least 1e1000 coins and without any of the row 1 generator upgrades.",
+    "adesc76": "Rage against the Machine: Exit [No Accelerator] with at least 1e1000 coins and without any of the row 1 generator upgrades.",
+    "adesc77": "Amish Paradise: Exit [No Shards] with at least 1e99,999 coins and without any of the row 1 generator upgrades.",
+    "adesc78": "Single-Cell: Complete [No Multiplier] once.",
+    "adesc79": "Solidarity: Complete [No Multiplier] three times.",
+    "adesc80": "Duplication-Free!: Complete [No Multiplier] five times.",
+    "adesc81": "Multitasking Challenged: Complete [No Multiplier] ten times.",
+    "adesc82": "No Deaths: Complete [No Multiplier] twenty times.",
+    "adesc83": "Population One: Complete [No Multiplier] fifty times.",
+    "adesc84": "Insert Another Token: Complete [No Multiplier] seventy-five times.",
+    "adesc85": "Slow Start: Complete [No Accelerator] once",
+    "adesc86": "Respawn Rate -12%: Complete [No Accelerator] three times.",
+    "adesc87": "Putting the Breaks On: Complete [No Accelerator] five times.",
+    "adesc88": "Racing a Sloth...: Complete [No Accelerator] ten times.",
+    "adesc89": "... and Losing.: Complete [No Accelerator] twenty times.",
+    "adesc90": "Planck Distance Traveled: Complete [No Accelerator] fifty times.",
+    "adesc91": "Inverse-Ackermann Growth: Complete [No Accelerator] seventy-five times.",
+    "adesc92": "Intact: Complete [No Shards] once.",
+    "adesc93": "Augments are Stupid!: Complete [No Shards] three times.",
+    "adesc94": "Grandmasters are Brilliant!: Complete [No Shards] five times.",
+    "adesc95": "Gotta get those Grandmasters Stronger: Complete [No Shards] ten times.",
+    "adesc96": "Summoning Enhancements: Complete [No Shards] twenty times.",
+    "adesc97": "Magic 99/99: Complete [No Shards] fifty times.",
+    "adesc98": "Perfect Foresight: Complete [No Shards] seventy-five times.",
+    "adesc99": "Inflation: Complete [Cost+] once.",
+    "adesc100": "Hyperinflation: Complete [Cost+] three times.",
+    "adesc101": "Market Bubble: Complete [Cost+] five times.",
+    "adesc102": "Bull Market: Complete [Cost+] ten times.",
+    "adesc103": "Wealth Inequality: Complete [Cost+] twenty times.",
+    "adesc104": "Severe Overpay: Complete [Cost+] fifty times.",
+    "adesc105": "Societal Collapse: Complete [Cost+] seventy-five times.",
+    "adesc106": "Excavation: Complete [Diamond-] once.",
+    "adesc107": "Digging Deep: Complete [Diamond-] three times.",
+    "adesc108": "Frack As Needed: Complete [Diamond-] five times.",
+    "adesc109": "Unobtainium Pickaxe: Complete [Diamond-] ten times.",
+    "adesc110": "Fortune III: Complete [Diamond-] twenty times.",
+    "adesc111": "Every kiss...: Complete [Diamond-] fifty times.",
+    "adesc112": "...begins with K.: Complete [Diamond-] seventy-five times.",
+    "adesc113": "Tax evasion!: Complete {[Tax+]} once.",
+    "adesc114": "Keeping up with the Joneses: Complete {[Tax+]} twice.",
+    "adesc115": "Offshore deposits: Complete {[Tax+]} three times.",
+    "adesc116": "Bribing officials: Complete {[Tax+]} five times.",
+    "adesc117": "Becoming President: Complete {[Tax+]} ten times.",
+    "adesc118": "Charitable Donation: Complete {[Tax+]} fifteen times.",
+    "adesc119": "IRS Audit: Complete {[Tax+]} twenty-five times.",
+    "adesc120": "Is there anybody in there?: Complete {[No Accelerator/Multiplier]} once.",
+    "adesc121": "Human being: Complete {[No Accelerator/Multiplier]} twice.",
+    "adesc122": "Interdimensional: Complete {[No Accelerator/Multiplier]} three times.",
+    "adesc123": "A slow nickel: Complete {[No Accelerator/Multiplier]} five times.",
+    "adesc124": "Multipliers don't even work 0/5: Complete {[No Accelerator/Multiplier]} ten times.",
+    "adesc125": "Accelerators don't even work -5/5: Complete {[No Accelerator/Multiplier]} fifteen times.",
+    "adesc126": "ACCELERATOR BOOSTS DON'T EVEN WORK -100/5: Complete {[No Accelerator/Multiplier]} twenty-five times.",
+    "adesc127": "Are you ready to handle a challenge this hard?",
+    "adesc128": "It's coming up in v1.009. Get prepared!",
+    "adesc129": "You may need a lot of rune levels to crack this one.",
+    "adesc130": "Maybe even some stored obtainium?",
+    "adesc131": "In any case, buckle up for the challenge.",
+    "adesc132": "I know you can beat this.",
+    "adesc133": "I believe in you.",
+    "adesc134": "TBD: TBD",
+    "adesc135": "TBD: TBD",
+    "adesc136": "TBD: TBD",
+    "adesc137": "TBD: TBD",
+    "adesc138": "TBD: TBD",
+    "adesc139": "TBD: TBD",
+    "adesc140": "TBD: TBD",
+    "adesc141": "TBD: TBD",
+    "adesc142": "TBD: TBD",
+    "adesc143": "TBD: TBD",
+    "adesc144": "TBD: TBD",
+    "adesc145": "TBD: TBD",
+    "adesc146": "TBD: TBD",
+    "adesc147": "TBD: TBD",
+    "adesc148": "Gas gas gas: Purchase 5 Accelerators.",
+    "adesc149": "0 to 25: Purchase 25 Accelerators.",
+    "adesc150": "0 to 100: Purchase 100 Accelerators",
+    "adesc151": "Highway to Hell: Purchase 666 Accelerators.",
+    "adesc152": "Perhaps you should brake: Purchase 2,000 Accelerators.",
+    "adesc153": "Exit the vehicle now!: Purchase 12,500 Accelerators.",
+    "adesc154": "Faster than light: Purchase 100,000 Accelerators.",
+    "adesc155": "I've been duped!: Purchase 2 Multipliers.",
+    "adesc156": "Funhouse Mirrors: Purchase 20 Multipliers.",
+    "adesc157": "Friend of binary: Purchase 100 Multipliers.",
+    "adesc158": "Feeling the cost growth yet?: Purchase 500 Multipliers.",
+    "adesc159": "Perhaps you'll feel the cost now: Purchase 2,000 Multipliers.",
+    "adesc160": "Exponential Synergy: Purchase 12,500 Multipliers.",
+    "adesc161": "Cloned: Purchase 100,000 Multipliers.",
+    "adesc162": "Jerk > 0: Purchase 2 Accelerator Boosts.",
+    "adesc163": "Can't the spedometer move any faster?: Purchase 10 Accelerator Boosts.",
+    "adesc164": "50 G rotations: Purchase 50 Accelerator Boosts.",
+    "adesc165": "Dematerialize: Purchase 200 Accelerator Booosts.",
+    "adesc166": "Breaking the laws of Physics: Purchase 1,000 Accelerator Boosts.",
+    "adesc167": "Decayed Realism: Purchase 5,000 Accelerator Boosts.",
+    "adesc168": "Kinda fast: Purchase 15,000 Accelerator Boosts.",
+    "adesc169": "A small stash: Hold onto 100 offerings.",
+    "adesc170": "Fit for a king: Hold onto 400 offerings.",
+    "adesc171": "Fit for a god: Hold onto 1600 offerings.",
+    "adesc172": "Extreme Hoarders edition: Hold onto 6400 offerings.",
+    "adesc173": "This can't be healthy: Hold onto 24000 offerings.",
+    "adesc174": "At least we get a little obtainium: Hold onto 96000 offerings.",
+    "adesc175": "Sacrilege: Hold onto 400000 offerings.",
+
+    "areward3": "Gain +.05% to Accelerator Power.",
+    "areward4": "Start transcensions/challenges with Worker Autobuyer unlocked.",
+    "areward5": "Gain +1 Accelerator per 500 Workers owned.",
+    "areward6": "Gain +1 Multiplier per 1,000 Workers owned.",
+    "areward7": "Gain +1 Accelerator Boost per 2,000 workers owned.",
+    "areward10": "Gain +.10% to Accelerator Power.",
+    "areward11": "Start transcensions/challenges with Investment Autobuyer unlocked.",
+    "areward12": "Gain +1 Accelerator per 500 Investments owned.",
+    "areward13": "Gain +1 Multiplier per 1,000 Investments owned.",
+    "areward14": "Gain +1 Accelerator Boost per 2,000 Investments owned.",
+    "areward17": "Gain +.15% to Accelerator Power.",
+    "areward18": "Start transcensions/challenges with Printer Autobuyer unlocked.",
+    "areward19": "Gain +1 Accelerator per 500 Printers owned.",
+    "areward20": "Gain +1 Multiplier per 1,000 Printers owned.",
+    "areward21": "Gain +1 Accelerator Boost per 2,000 Printers owned.",
+    "areward24": "Gain +.20% to Accelerator Power.",
+    "areward25": "Start transcensions/challenges with Coin Mint Autobuyer unlocked.",
+    "areward26": "Gain +1 Accelerator per 500 Mints owned.",
+    "areward27": "Gain +1 Multiplier per 1,000 Mints owned.",
+    "areward28": "Gain +1 Accelerator Boost per 2,000 Mints owned.",
+    "areward31": "Gain +.25% to Accelerator Power.",
+    "areward32": "Start transcensions/challenges with Alchemy Autobuyer unlocked.",
+    "areward33": "Gain 10% more offerings from resets || +1 Accelerator per 500 Alchemies!",
+    "areward34": "Gain 15% more offerings from resets (stacks multiplicatively!) || +1 Multiplier per 1,000 Alchemies!",
+    "areward35": "Gain 25% more offerings from resets (stacks multiplicatively!) || +1 Accelerator Boost per 2,000 Alchemies!",
+    "areward36": "Multiply Crystal Production by 2x.",
+    "areward37": "Multiply Crystal Production by the common logarithm of owned Diamonds. Prestiges give more offerings based on time spent (Up to +15 at 1800 seconds)",
+    "areward38": "Unlock the Duplication rune!",
+    "areward43": "Accelerator Boosts can be purchased from any screen. Unlock the Auto-Prestige feature.",
+    "areward44": "Unlock the Prism Rune! Transcensions give more offerings based on time spent (Up to +15 at 1800 seconds)",
+    "areward45": "Reduce tax scaling by up to 5%, depending on the length of prestige.",
+    "areward46": "Reduce tax scaling by up to another 5%, depending on length of prestige.",
+    "areward47": "Reduce tax scaling by up to ANOTHER 10%, depending on length of prestige!",
+    "areward50": "Unlock new Atomic production and unlock 3 new incredibly difficult challenges! Gain 2x particles on all future Reincarnations!",
+    "areward51": "Reincarnations give more offerings based on time spent (Up to +25 at 1800 seconds)",
+    "areward57": "Gain +1, +1% free Multipliers!",
+    "areward58": "Gain +1, +1% more free Multipliers!",
+    "areward59": "Gain +1, +1% more, MORE free Multipliers!",
+    "areward60": "Gain +2, +1% free Accelerators!",
+    "areward61": "Gain +2, +1% more free Accelerators!",
+    "areward62": "Gain +2, +1% more, MORE free Accelerators!",
+    "areward71": "+1% Conversion Exponent on all generator upgrades!",
+    "areward72": "+1% Conversion Exponent on all generator upgrades!",
+    "areward73": "+1% Conversion Exponent on all generator upgrades!",
+    "areward74": "+1% Conversion Exponent on all generator upgrades!",
+    "areward75": "+1% Conversion Exponent on all generator upgrades!",
+    "areward76": "+1% Conversion Exponent on all generator upgrades!",
+    "areward77": "+1% Conversion Exponent on all generator upgrades! They're in overdrive now!",
+    "areward78": "Start transcensions/challenges with 1 Refinery and automatically buy Refineries.",
+    "areward79": "Automatically buy the first crystal upgrade if you can afford it!",
+    "areward80": "Start transcensions/challenges with Multiplier Autobuyer unlocked. +5% chance to not spend an offering when sacrificing.",
+    "areward82": "Delay tax growth by 4%.",
+    "areward85": "Start transcensions/challenges with 1 Coal Plant and automatically buy Coal Plants.",
+    "areward86": "Automatically buy the second crystal upgrade if you can afford it!",
+    "areward87": "Start transcensions/challenges with Accelerator Autobuyer unlocked. +5% chance to not spend an offering when sacrificing.",
+    "areward89": "Delay tax growth by 4%.",
+    "areward92": "Start transcensions/challenges with 1 Coal Rig and automatically buy Coal Rigs.",
+    "areward93": "Automatically buy the third crystal upgrade if you can afford it!",
+    "areward94": "+5% chance to not spend an offering when sacrificing.",
+    "areward96": "Delay tax growth by 4%.",
+    "areward99": "Start transcensions/challenges with 1 Diamond Pickaxe and automatically buy Diamond Pickaxes.",
+    "areward100": "Automatically buy the fourth crystal upgrade if you can afford it!",
+    "areward101": "+5% chance to not spend an offering when sacrificing.",
+    "areward102": "Unlock the Thrift rune!",
+    "areward103": "Delay tax growth by 4%.",
+    "areward106": "Start transcensions/challenges with 1 Pandora's Box and automatically buy Pandora's Boxes.",
+    "areward107": "Automatically buy the fifth crystal upgrade if you can afford it!",
+    "areward108": "+5% chance to not spend an offering when sacrificing.",
+    "areward110": "Delay tax growth by 4%.",
+    "areward115": "+5% chance to not spend an offering when sacrificing.",
+    "areward117": "Delay tax growth by 5.66%.",
+    "areward122": "+10% chance to not spend an offering when sacrificing.",
+    "areward123": "Unlock 5 expensive yet powerful researches!",
+    "areward124": "Delay tax growth by 5.66%.",
+    "areward129": "+10% chance to not spend an offering when sacrificing.",
+    "areward131": "Delay tax growth by 5.66%."
 }
